# align-equals

./: LICENSE  README.md  align-equals.cabal
app/: Main.hs
