cabal-version: 3.0
name: align-equals
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable align-equals
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.16.4.0,
    safe,
    text,

  hs-source-dirs: app
  default-language: Haskell2010
